--- a/src/pages/home_page/home_page.css
+++ b/src/pages/home_page/home_page.css
@@ -21,7 +21,6 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    margin-top: 2rem;
 }
 
 .introduction .text .subtext {
@@ -37,6 +36,7 @@
         flex-direction: column;
         align-items: center;
         text-align: center;
+        gap: 0;
     }
     
     .introduction img {
